# notebooks

./: .gitignore  README.md  pyproject.toml
hf/: csv-to-hf.ipynb  upload-shakespeare.ipynb  upload-titanic.ipynb
kaggle/titanic/: kernel-metadata.json  submission.csv  titanic.ipynb
lm/: simple-gpt-transformer.ipynb
