[project]
name = "notebooks"
version = "0.1.0"
description = "Notebooks that cover AI/ML/DS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.16.1",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
